nuwa-script/implementations/python/nuwa/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> script
Rule 1     script -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> let_statement
Rule 5     statement -> call_statement
Rule 6     statement -> if_statement
Rule 7     statement -> for_statement
Rule 8     let_statement -> LET ID ASSIGN expression
Rule 9     call_statement -> CALL ID LBRACE arguments RBRACE
Rule 10    if_statement -> IF expression THEN statements END
Rule 11    if_statement -> IF expression THEN statements ELSE statements END
Rule 12    for_statement -> FOR ID IN expression DO statements END
Rule 13    arguments -> argument_list
Rule 14    arguments -> empty
Rule 15    argument_list -> argument_list COMMA argument
Rule 16    argument_list -> argument
Rule 17    argument -> ID COLON expression
Rule 18    empty -> <empty>
Rule 19    expression -> binary_op
Rule 20    expression -> unary_op
Rule 21    expression -> function_call
Rule 22    expression -> call_expression
Rule 23    expression -> calc_expression
Rule 24    expression -> literal
Rule 25    expression -> variable
Rule 26    expression -> LPAREN expression RPAREN
Rule 27    binary_op -> expression EQ expression
Rule 28    binary_op -> expression NE expression
Rule 29    binary_op -> expression LT expression
Rule 30    binary_op -> expression LE expression
Rule 31    binary_op -> expression GT expression
Rule 32    binary_op -> expression GE expression
Rule 33    binary_op -> expression AND expression
Rule 34    binary_op -> expression OR expression
Rule 35    binary_op -> expression DOT ID
Rule 36    unary_op -> NOT expression
Rule 37    function_call -> NOW LPAREN RPAREN
Rule 38    call_expression -> CALL ID LBRACE arguments RBRACE
Rule 39    calc_expression -> CALC LBRACE calc_args RBRACE
Rule 40    calc_args -> ID COLON STRING COMMA ID COLON LBRACE arguments RBRACE
Rule 41    literal -> NUMBER
Rule 42    literal -> STRING
Rule 43    literal -> BOOLEAN
Rule 44    variable -> ID

Terminals, with rules where they appear

AND                  : 33
ASSIGN               : 8
BOOLEAN              : 43
CALC                 : 39
CALL                 : 9 38
COLON                : 17 40 40
COMMA                : 15 40
DO                   : 12
DOT                  : 35
ELSE                 : 11
END                  : 10 11 12
EQ                   : 27
FOR                  : 12
GE                   : 32
GT                   : 31
ID                   : 8 9 12 17 35 38 40 40 44
IF                   : 10 11
IN                   : 12
LBRACE               : 9 38 39 40
LE                   : 30
LET                  : 8
LPAREN               : 26 37
LT                   : 29
NE                   : 28
NOT                  : 36
NOW                  : 37
NUMBER               : 41
OR                   : 34
RBRACE               : 9 38 39 40
RPAREN               : 26 37
STRING               : 40 42
THEN                 : 10 11
error                : 

Nonterminals, with rules where they appear

argument             : 15 16
argument_list        : 13 15
arguments            : 9 38 40
binary_op            : 19
calc_args            : 39
calc_expression      : 23
call_expression      : 22
call_statement       : 5
empty                : 14
expression           : 8 10 11 12 17 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 36
for_statement        : 7
function_call        : 21
if_statement         : 6
let_statement        : 4
literal              : 24
script               : 0
statement            : 2 3
statements           : 1 2 10 11 11 12
unary_op             : 20
variable             : 25

Parsing method: LALR

state 0

    (0) S' -> . script
    (1) script -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . let_statement
    (5) statement -> . call_statement
    (6) statement -> . if_statement
    (7) statement -> . for_statement
    (8) let_statement -> . LET ID ASSIGN expression
    (9) call_statement -> . CALL ID LBRACE arguments RBRACE
    (10) if_statement -> . IF expression THEN statements END
    (11) if_statement -> . IF expression THEN statements ELSE statements END
    (12) for_statement -> . FOR ID IN expression DO statements END

    LET             shift and go to state 8
    CALL            shift and go to state 9
    IF              shift and go to state 10
    FOR             shift and go to state 11

    script                         shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    let_statement                  shift and go to state 4
    call_statement                 shift and go to state 5
    if_statement                   shift and go to state 6
    for_statement                  shift and go to state 7

state 1

    (0) S' -> script .



state 2

    (1) script -> statements .
    (2) statements -> statements . statement
    (4) statement -> . let_statement
    (5) statement -> . call_statement
    (6) statement -> . if_statement
    (7) statement -> . for_statement
    (8) let_statement -> . LET ID ASSIGN expression
    (9) call_statement -> . CALL ID LBRACE arguments RBRACE
    (10) if_statement -> . IF expression THEN statements END
    (11) if_statement -> . IF expression THEN statements ELSE statements END
    (12) for_statement -> . FOR ID IN expression DO statements END

    $end            reduce using rule 1 (script -> statements .)
    LET             shift and go to state 8
    CALL            shift and go to state 9
    IF              shift and go to state 10
    FOR             shift and go to state 11

    statement                      shift and go to state 12
    let_statement                  shift and go to state 4
    call_statement                 shift and go to state 5
    if_statement                   shift and go to state 6
    for_statement                  shift and go to state 7

state 3

    (3) statements -> statement .

    LET             reduce using rule 3 (statements -> statement .)
    CALL            reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    FOR             reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    END             reduce using rule 3 (statements -> statement .)
    ELSE            reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> let_statement .

    LET             reduce using rule 4 (statement -> let_statement .)
    CALL            reduce using rule 4 (statement -> let_statement .)
    IF              reduce using rule 4 (statement -> let_statement .)
    FOR             reduce using rule 4 (statement -> let_statement .)
    $end            reduce using rule 4 (statement -> let_statement .)
    END             reduce using rule 4 (statement -> let_statement .)
    ELSE            reduce using rule 4 (statement -> let_statement .)


state 5

    (5) statement -> call_statement .

    LET             reduce using rule 5 (statement -> call_statement .)
    CALL            reduce using rule 5 (statement -> call_statement .)
    IF              reduce using rule 5 (statement -> call_statement .)
    FOR             reduce using rule 5 (statement -> call_statement .)
    $end            reduce using rule 5 (statement -> call_statement .)
    END             reduce using rule 5 (statement -> call_statement .)
    ELSE            reduce using rule 5 (statement -> call_statement .)


state 6

    (6) statement -> if_statement .

    LET             reduce using rule 6 (statement -> if_statement .)
    CALL            reduce using rule 6 (statement -> if_statement .)
    IF              reduce using rule 6 (statement -> if_statement .)
    FOR             reduce using rule 6 (statement -> if_statement .)
    $end            reduce using rule 6 (statement -> if_statement .)
    END             reduce using rule 6 (statement -> if_statement .)
    ELSE            reduce using rule 6 (statement -> if_statement .)


state 7

    (7) statement -> for_statement .

    LET             reduce using rule 7 (statement -> for_statement .)
    CALL            reduce using rule 7 (statement -> for_statement .)
    IF              reduce using rule 7 (statement -> for_statement .)
    FOR             reduce using rule 7 (statement -> for_statement .)
    $end            reduce using rule 7 (statement -> for_statement .)
    END             reduce using rule 7 (statement -> for_statement .)
    ELSE            reduce using rule 7 (statement -> for_statement .)


state 8

    (8) let_statement -> LET . ID ASSIGN expression

    ID              shift and go to state 13


state 9

    (9) call_statement -> CALL . ID LBRACE arguments RBRACE

    ID              shift and go to state 14


state 10

    (10) if_statement -> IF . expression THEN statements END
    (11) if_statement -> IF . expression THEN statements ELSE statements END
    (19) expression -> . binary_op
    (20) expression -> . unary_op
    (21) expression -> . function_call
    (22) expression -> . call_expression
    (23) expression -> . calc_expression
    (24) expression -> . literal
    (25) expression -> . variable
    (26) expression -> . LPAREN expression RPAREN
    (27) binary_op -> . expression EQ expression
    (28) binary_op -> . expression NE expression
    (29) binary_op -> . expression LT expression
    (30) binary_op -> . expression LE expression
    (31) binary_op -> . expression GT expression
    (32) binary_op -> . expression GE expression
    (33) binary_op -> . expression AND expression
    (34) binary_op -> . expression OR expression
    (35) binary_op -> . expression DOT ID
    (36) unary_op -> . NOT expression
    (37) function_call -> . NOW LPAREN RPAREN
    (38) call_expression -> . CALL ID LBRACE arguments RBRACE
    (39) calc_expression -> . CALC LBRACE calc_args RBRACE
    (41) literal -> . NUMBER
    (42) literal -> . STRING
    (43) literal -> . BOOLEAN
    (44) variable -> . ID

    LPAREN          shift and go to state 23
    NOT             shift and go to state 25
    NOW             shift and go to state 26
    CALL            shift and go to state 27
    CALC            shift and go to state 28
    NUMBER          shift and go to state 29
    STRING          shift and go to state 30
    BOOLEAN         shift and go to state 31
    ID              shift and go to state 24

    expression                     shift and go to state 15
    binary_op                      shift and go to state 16
    unary_op                       shift and go to state 17
    function_call                  shift and go to state 18
    call_expression                shift and go to state 19
    calc_expression                shift and go to state 20
    literal                        shift and go to state 21
    variable                       shift and go to state 22

state 11

    (12) for_statement -> FOR . ID IN expression DO statements END

    ID              shift and go to state 32


state 12

    (2) statements -> statements statement .

    LET             reduce using rule 2 (statements -> statements statement .)
    CALL            reduce using rule 2 (statements -> statements statement .)
    IF              reduce using rule 2 (statements -> statements statement .)
    FOR             reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    END             reduce using rule 2 (statements -> statements statement .)
    ELSE            reduce using rule 2 (statements -> statements statement .)


state 13

    (8) let_statement -> LET ID . ASSIGN expression

    ASSIGN          shift and go to state 33


state 14

    (9) call_statement -> CALL ID . LBRACE arguments RBRACE

    LBRACE          shift and go to state 34


state 15

    (10) if_statement -> IF expression . THEN statements END
    (11) if_statement -> IF expression . THEN statements ELSE statements END
    (27) binary_op -> expression . EQ expression
    (28) binary_op -> expression . NE expression
    (29) binary_op -> expression . LT expression
    (30) binary_op -> expression . LE expression
    (31) binary_op -> expression . GT expression
    (32) binary_op -> expression . GE expression
    (33) binary_op -> expression . AND expression
    (34) binary_op -> expression . OR expression
    (35) binary_op -> expression . DOT ID

    THEN            shift and go to state 35
    EQ              shift and go to state 36
    NE              shift and go to state 37
    LT              shift and go to state 38
    LE              shift and go to state 39
    GT              shift and go to state 40
    GE              shift and go to state 41
    AND             shift and go to state 42
    OR              shift and go to state 43
    DOT             shift and go to state 44


state 16

    (19) expression -> binary_op .

    THEN            reduce using rule 19 (expression -> binary_op .)
    EQ              reduce using rule 19 (expression -> binary_op .)
    NE              reduce using rule 19 (expression -> binary_op .)
    LT              reduce using rule 19 (expression -> binary_op .)
    LE              reduce using rule 19 (expression -> binary_op .)
    GT              reduce using rule 19 (expression -> binary_op .)
    GE              reduce using rule 19 (expression -> binary_op .)
    AND             reduce using rule 19 (expression -> binary_op .)
    OR              reduce using rule 19 (expression -> binary_op .)
    DOT             reduce using rule 19 (expression -> binary_op .)
    RPAREN          reduce using rule 19 (expression -> binary_op .)
    LET             reduce using rule 19 (expression -> binary_op .)
    CALL            reduce using rule 19 (expression -> binary_op .)
    IF              reduce using rule 19 (expression -> binary_op .)
    FOR             reduce using rule 19 (expression -> binary_op .)
    $end            reduce using rule 19 (expression -> binary_op .)
    END             reduce using rule 19 (expression -> binary_op .)
    ELSE            reduce using rule 19 (expression -> binary_op .)
    DO              reduce using rule 19 (expression -> binary_op .)
    COMMA           reduce using rule 19 (expression -> binary_op .)
    RBRACE          reduce using rule 19 (expression -> binary_op .)


state 17

    (20) expression -> unary_op .

    THEN            reduce using rule 20 (expression -> unary_op .)
    EQ              reduce using rule 20 (expression -> unary_op .)
    NE              reduce using rule 20 (expression -> unary_op .)
    LT              reduce using rule 20 (expression -> unary_op .)
    LE              reduce using rule 20 (expression -> unary_op .)
    GT              reduce using rule 20 (expression -> unary_op .)
    GE              reduce using rule 20 (expression -> unary_op .)
    AND             reduce using rule 20 (expression -> unary_op .)
    OR              reduce using rule 20 (expression -> unary_op .)
    DOT             reduce using rule 20 (expression -> unary_op .)
    RPAREN          reduce using rule 20 (expression -> unary_op .)
    LET             reduce using rule 20 (expression -> unary_op .)
    CALL            reduce using rule 20 (expression -> unary_op .)
    IF              reduce using rule 20 (expression -> unary_op .)
    FOR             reduce using rule 20 (expression -> unary_op .)
    $end            reduce using rule 20 (expression -> unary_op .)
    END             reduce using rule 20 (expression -> unary_op .)
    ELSE            reduce using rule 20 (expression -> unary_op .)
    DO              reduce using rule 20 (expression -> unary_op .)
    COMMA           reduce using rule 20 (expression -> unary_op .)
    RBRACE          reduce using rule 20 (expression -> unary_op .)


state 18

    (21) expression -> function_call .

    THEN            reduce using rule 21 (expression -> function_call .)
    EQ              reduce using rule 21 (expression -> function_call .)
    NE              reduce using rule 21 (expression -> function_call .)
    LT              reduce using rule 21 (expression -> function_call .)
    LE              reduce using rule 21 (expression -> function_call .)
    GT              reduce using rule 21 (expression -> function_call .)
    GE              reduce using rule 21 (expression -> function_call .)
    AND             reduce using rule 21 (expression -> function_call .)
    OR              reduce using rule 21 (expression -> function_call .)
    DOT             reduce using rule 21 (expression -> function_call .)
    RPAREN          reduce using rule 21 (expression -> function_call .)
    LET             reduce using rule 21 (expression -> function_call .)
    CALL            reduce using rule 21 (expression -> function_call .)
    IF              reduce using rule 21 (expression -> function_call .)
    FOR             reduce using rule 21 (expression -> function_call .)
    $end            reduce using rule 21 (expression -> function_call .)
    END             reduce using rule 21 (expression -> function_call .)
    ELSE            reduce using rule 21 (expression -> function_call .)
    DO              reduce using rule 21 (expression -> function_call .)
    COMMA           reduce using rule 21 (expression -> function_call .)
    RBRACE          reduce using rule 21 (expression -> function_call .)


state 19

    (22) expression -> call_expression .

    THEN            reduce using rule 22 (expression -> call_expression .)
    EQ              reduce using rule 22 (expression -> call_expression .)
    NE              reduce using rule 22 (expression -> call_expression .)
    LT              reduce using rule 22 (expression -> call_expression .)
    LE              reduce using rule 22 (expression -> call_expression .)
    GT              reduce using rule 22 (expression -> call_expression .)
    GE              reduce using rule 22 (expression -> call_expression .)
    AND             reduce using rule 22 (expression -> call_expression .)
    OR              reduce using rule 22 (expression -> call_expression .)
    DOT             reduce using rule 22 (expression -> call_expression .)
    RPAREN          reduce using rule 22 (expression -> call_expression .)
    LET             reduce using rule 22 (expression -> call_expression .)
    CALL            reduce using rule 22 (expression -> call_expression .)
    IF              reduce using rule 22 (expression -> call_expression .)
    FOR             reduce using rule 22 (expression -> call_expression .)
    $end            reduce using rule 22 (expression -> call_expression .)
    END             reduce using rule 22 (expression -> call_expression .)
    ELSE            reduce using rule 22 (expression -> call_expression .)
    DO              reduce using rule 22 (expression -> call_expression .)
    COMMA           reduce using rule 22 (expression -> call_expression .)
    RBRACE          reduce using rule 22 (expression -> call_expression .)


state 20

    (23) expression -> calc_expression .

    THEN            reduce using rule 23 (expression -> calc_expression .)
    EQ              reduce using rule 23 (expression -> calc_expression .)
    NE              reduce using rule 23 (expression -> calc_expression .)
    LT              reduce using rule 23 (expression -> calc_expression .)
    LE              reduce using rule 23 (expression -> calc_expression .)
    GT              reduce using rule 23 (expression -> calc_expression .)
    GE              reduce using rule 23 (expression -> calc_expression .)
    AND             reduce using rule 23 (expression -> calc_expression .)
    OR              reduce using rule 23 (expression -> calc_expression .)
    DOT             reduce using rule 23 (expression -> calc_expression .)
    RPAREN          reduce using rule 23 (expression -> calc_expression .)
    LET             reduce using rule 23 (expression -> calc_expression .)
    CALL            reduce using rule 23 (expression -> calc_expression .)
    IF              reduce using rule 23 (expression -> calc_expression .)
    FOR             reduce using rule 23 (expression -> calc_expression .)
    $end            reduce using rule 23 (expression -> calc_expression .)
    END             reduce using rule 23 (expression -> calc_expression .)
    ELSE            reduce using rule 23 (expression -> calc_expression .)
    DO              reduce using rule 23 (expression -> calc_expression .)
    COMMA           reduce using rule 23 (expression -> calc_expression .)
    RBRACE          reduce using rule 23 (expression -> calc_expression .)


state 21

    (24) expression -> literal .

    THEN            reduce using rule 24 (expression -> literal .)
    EQ              reduce using rule 24 (expression -> literal .)
    NE              reduce using rule 24 (expression -> literal .)
    LT              reduce using rule 24 (expression -> literal .)
    LE              reduce using rule 24 (expression -> literal .)
    GT              reduce using rule 24 (expression -> literal .)
    GE              reduce using rule 24 (expression -> literal .)
    AND             reduce using rule 24 (expression -> literal .)
    OR              reduce using rule 24 (expression -> literal .)
    DOT             reduce using rule 24 (expression -> literal .)
    RPAREN          reduce using rule 24 (expression -> literal .)
    LET             reduce using rule 24 (expression -> literal .)
    CALL            reduce using rule 24 (expression -> literal .)
    IF              reduce using rule 24 (expression -> literal .)
    FOR             reduce using rule 24 (expression -> literal .)
    $end            reduce using rule 24 (expression -> literal .)
    END             reduce using rule 24 (expression -> literal .)
    ELSE            reduce using rule 24 (expression -> literal .)
    DO              reduce using rule 24 (expression -> literal .)
    COMMA           reduce using rule 24 (expression -> literal .)
    RBRACE          reduce using rule 24 (expression -> literal .)


state 22

    (25) expression -> variable .

    THEN            reduce using rule 25 (expression -> variable .)
    EQ              reduce using rule 25 (expression -> variable .)
    NE              reduce using rule 25 (expression -> variable .)
    LT              reduce using rule 25 (expression -> variable .)
    LE              reduce using rule 25 (expression -> variable .)
    GT              reduce using rule 25 (expression -> variable .)
    GE              reduce using rule 25 (expression -> variable .)
    AND             reduce using rule 25 (expression -> variable .)
    OR              reduce using rule 25 (expression -> variable .)
    DOT             reduce using rule 25 (expression -> variable .)
    RPAREN          reduce using rule 25 (expression -> variable .)
    LET             reduce using rule 25 (expression -> variable .)
    CALL            reduce using rule 25 (expression -> variable .)
    IF              reduce using rule 25 (expression -> variable .)
    FOR             reduce using rule 25 (expression -> variable .)
    $end            reduce using rule 25 (expression -> variable .)
    END             reduce using rule 25 (expression -> variable .)
    ELSE            reduce using rule 25 (expression -> variable .)
    DO              reduce using rule 25 (expression -> variable .)
    COMMA           reduce using rule 25 (expression -> variable .)
    RBRACE          reduce using rule 25 (expression -> variable .)


state 23

    (26) expression -> LPAREN . expression RPAREN
    (19) expression -> . binary_op
    (20) expression -> . unary_op
    (21) expression -> . function_call
    (22) expression -> . call_expression
    (23) expression -> . calc_expression
    (24) expression -> . literal
    (25) expression -> . variable
    (26) expression -> . LPAREN expression RPAREN
    (27) binary_op -> . expression EQ expression
    (28) binary_op -> . expression NE expression
    (29) binary_op -> . expression LT expression
    (30) binary_op -> . expression LE expression
    (31) binary_op -> . expression GT expression
    (32) binary_op -> . expression GE expression
    (33) binary_op -> . expression AND expression
    (34) binary_op -> . expression OR expression
    (35) binary_op -> . expression DOT ID
    (36) unary_op -> . NOT expression
    (37) function_call -> . NOW LPAREN RPAREN
    (38) call_expression -> . CALL ID LBRACE arguments RBRACE
    (39) calc_expression -> . CALC LBRACE calc_args RBRACE
    (41) literal -> . NUMBER
    (42) literal -> . STRING
    (43) literal -> . BOOLEAN
    (44) variable -> . ID

    LPAREN          shift and go to state 23
    NOT             shift and go to state 25
    NOW             shift and go to state 26
    CALL            shift and go to state 27
    CALC            shift and go to state 28
    NUMBER          shift and go to state 29
    STRING          shift and go to state 30
    BOOLEAN         shift and go to state 31
    ID              shift and go to state 24

    expression                     shift and go to state 45
    binary_op                      shift and go to state 16
    unary_op                       shift and go to state 17
    function_call                  shift and go to state 18
    call_expression                shift and go to state 19
    calc_expression                shift and go to state 20
    literal                        shift and go to state 21
    variable                       shift and go to state 22

state 24

    (44) variable -> ID .

    THEN            reduce using rule 44 (variable -> ID .)
    EQ              reduce using rule 44 (variable -> ID .)
    NE              reduce using rule 44 (variable -> ID .)
    LT              reduce using rule 44 (variable -> ID .)
    LE              reduce using rule 44 (variable -> ID .)
    GT              reduce using rule 44 (variable -> ID .)
    GE              reduce using rule 44 (variable -> ID .)
    AND             reduce using rule 44 (variable -> ID .)
    OR              reduce using rule 44 (variable -> ID .)
    DOT             reduce using rule 44 (variable -> ID .)
    RPAREN          reduce using rule 44 (variable -> ID .)
    LET             reduce using rule 44 (variable -> ID .)
    CALL            reduce using rule 44 (variable -> ID .)
    IF              reduce using rule 44 (variable -> ID .)
    FOR             reduce using rule 44 (variable -> ID .)
    $end            reduce using rule 44 (variable -> ID .)
    END             reduce using rule 44 (variable -> ID .)
    ELSE            reduce using rule 44 (variable -> ID .)
    DO              reduce using rule 44 (variable -> ID .)
    COMMA           reduce using rule 44 (variable -> ID .)
    RBRACE          reduce using rule 44 (variable -> ID .)


state 25

    (36) unary_op -> NOT . expression
    (19) expression -> . binary_op
    (20) expression -> . unary_op
    (21) expression -> . function_call
    (22) expression -> . call_expression
    (23) expression -> . calc_expression
    (24) expression -> . literal
    (25) expression -> . variable
    (26) expression -> . LPAREN expression RPAREN
    (27) binary_op -> . expression EQ expression
    (28) binary_op -> . expression NE expression
    (29) binary_op -> . expression LT expression
    (30) binary_op -> . expression LE expression
    (31) binary_op -> . expression GT expression
    (32) binary_op -> . expression GE expression
    (33) binary_op -> . expression AND expression
    (34) binary_op -> . expression OR expression
    (35) binary_op -> . expression DOT ID
    (36) unary_op -> . NOT expression
    (37) function_call -> . NOW LPAREN RPAREN
    (38) call_expression -> . CALL ID LBRACE arguments RBRACE
    (39) calc_expression -> . CALC LBRACE calc_args RBRACE
    (41) literal -> . NUMBER
    (42) literal -> . STRING
    (43) literal -> . BOOLEAN
    (44) variable -> . ID

    LPAREN          shift and go to state 23
    NOT             shift and go to state 25
    NOW             shift and go to state 26
    CALL            shift and go to state 27
    CALC            shift and go to state 28
    NUMBER          shift and go to state 29
    STRING          shift and go to state 30
    BOOLEAN         shift and go to state 31
    ID              shift and go to state 24
